--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
 body {
     background-color: black;
 }
+
+.body {
+    display: flex;
+    justify-items: normal;
+    align-items: center;
+}
+
+.body button {
+    margin: 30px
+}
