--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-.video {
+.item {
     display: inline-block;
     cursor: pointer;
 }
 
 body {
-    background-color: black;
+    background-color: pink;
 }
 
 .body {
